# pivlabform

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  README.md  config.yaml  pyproject.toml
configurations/: custom_config.yaml  groups.yaml  groups_config.yaml  manual.yaml  pivlabform-test.yaml  projects_config.yaml  protected_branches.yaml  single_project.yaml
configurations/examples/: pivlabform_test.yaml  protect_branches.yaml  sandbox.yaml
configurations/templates/: global_template.yaml
examples/python/: create_entities.py  delete_entities.py  mr_settings.py
pivlabform/: _cli_logic.py  _helpers.py  main.py  process.py
pivlabform/gitlab/: gitlab.py
pivlabform/gitlab/models/: __init__.py
src/pivlabform/: __init__.py  __main__.py  _cli_logic.py  _consts.py  _helpers.py  _logger.py  cli.py  main.py  pivlabform.py
src/pivlabform/gitlab/: gitlab.py
src/pivlabform/gitlab/models/: __init__.py  base_settings.py  config_model.py  configs.py  entiry_settings.py  entity_config.py  entity_settings.py  group.py  project.py  protected_branches.py  variables.py
src/pivlabform/gvars/: __init__.py
src/pivlabform/utils/: _helpers.py  _logger.py
