[project]
name = "pivlabform"
version = "0.1.0"
description = "GitLab as Code tool"
authors = [
    {name = "Arsenii Nikulin",email = "studentq.work@yandex.ru"}
]
license = {text = "PivLab Tech"}
readme = "README.md"
packages = [
    { include = "pivlabform", from = "src" },
]

requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pyyml (>=0.0.2,<0.0.3)",
    "typing-extensions (>=4.15.0,<5.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "click (>=8.3.1,<9.0.0)",
    "colorlog (>=6.10.1,<7.0.0)",
]

[tool.poetry.scripts]
pivlabform = "pivlabform.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "python-dotenv (>=1.2.1,<2.0.0)"
]
